# finscribe-smart-scan

./: .demo_gif_instructions.txt  .env  .env.example  .gitignore  .pre-commit-config.yaml  AI_OCR_IMPROVEMENTS_IMPLEMENTED.md  BUSINESS_IMPACT_IMPLEMENTATION.md  CAMEL_DOCKER_SETUP.md  CAMEL_INTEGRATION.md  CONTRIBUTING.md  DIVERSITY_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.llm  ERNIE_CHALLENGE_SUBMISSION.md  ERNIE_INTEGRATION.md  FEATURES_IMPLEMENTATION.md  FINETUNING_SUMMARY.md  FINSCRIBE_PIPELINE_IMPLEMENTATION.md  FIXES_SUMMARY.md  FREE_APIS_SUMMARY.md  FREE_APIS_USAGE.md  FRONTEND-CHANGES.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  FRONTEND_INTEGRATION.md  FinScribe AI Backend Runbook.md  HACKATHON_IMPLEMENTATION_GUIDE.md  HACKATHON_STRATEGY.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LLAMAFACTORY_INTEGRATION.md  MODEL_CARD.md  MONETIZATION_SETUP.md  Makefile  OCR_BACKEND_IMPLEMENTATION.md  OCR_FIXES_SUMMARY.md  PADDLEOCR_IMPLEMENTATION_SUMMARY.md  (+41 more)
.streamlit/: config.toml
alembic/: __init__.py  env.py
app/: main.py  streamlit_llamafactory.py  test_main.py
backend/: __init__.py  logging_config.py  main.py
configs/: train_config.yaml
dags/: invoice_etl_dag.py
data/: README.md  README_data.md  active_learning.jsonl  active_learning_seed.jsonl  dataset_info.json  finscribe_unsloth.jsonl  unsloth_train.jsonl  unsloth_val.jsonl
data_pipeline/: README.md  __init__.py  ingestion.py  normalizer.py  ocr_client.py  persistence.py  preprocess.py  semantic_parser.py  utils.py  validator.py
docs/: BENCHMARK_TABLE.md  DOCUMENT_DIVERSITY_GUIDE.md  ETL_IMPLEMENTATION_SUMMARY.md  ETL_PIPELINE_IMPLEMENTATION.md  FINANCE_DATA_LAYER.md  FINANCIAL_STATEMENT_GENERATION_PLAN.md  FINETUNING_GUIDE.md  HACKATHON_CHECKLIST.md  HACKATHON_RESOURCES_USED.md  LLAMAFACTORY_INTEGRATION.md  NON_OCR_FIXES_SUMMARY.md  OCR_PIPELINE_SETUP.md  PADDLEOCR_STRUCTURED_OUTPUT_GUIDE.md  RECEIPT_PROCESSING_GUIDE.md  RUNBOOK.md  STRUCTURED_OUTPUT_GUIDE.md  SUPABASE_IMPROVEMENTS.md  TRAINING_IMPLEMENTATION_SUMMARY.md  UNSLOTH_QUICKSTART.md  arch.md  one_slide_summary.md  pitch_script.md  quickbooks_mapping.md  ui_accessibility.md
erniekit_finetuning/: erniekit_config.yaml  evaluate.py
evaluation/: results.md
examples/: SYNTHETIC_DATA_GUIDE.md  finance_data_layer_example.py  generate_sample_invoice.py  generate_training_data.py  post_processing_example.py  quick_start_example.py  sample_walmart_ocr.json
finscribe/: README.md  __init__.py  celery_app.py  confidence.py  integration_example.py  llm_client.py  ocr_client.py  pdf_utils.py  schema_router.py  semantic_invoice_parser.py  semantic_parse_task.py  staging.py  streaming_ocr.py  tasks.py  visualize.py
flows/: invoice_etl_flow.py
frontend/: Dockerfile  README.md  __init__.py  app.py  components.py  mock_responses.py  requirements-frontend.txt  run.sh  utils.py
inference/: README.md
llamafactory-docker/: Dockerfile
mock_validator/: Dockerfile  __init__.py  app.py  requirements.txt
src/: App.tsx  (+2 more)
(+436 files in other folders)
