[tool.poetry]
name = "finscribe-smart-scan"
version = "1.0.0"
description = "AI-powered financial document understanding with validation & active learning"
authors = ["FinScribe Team"]
readme = "README.md"
packages = [{include = "app"}, {include = "data_pipeline"}, {include = "finscribe"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-dotenv = "*"
requests = "*"
Pillow = "^10.1.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
python-magic = "*"
pdf2image = "*"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.0"
celery = "^5.3.4"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
sse-starlette = "^1.8.2"
stripe = "^7.8.0"
transformers = ">=4.35.0"
torch = ">=2.1.0"
datasets = ">=2.14.0"
peft = ">=0.6.0"
accelerate = ">=0.24.0"
faker = ">=19.0.0"
tqdm = ">=4.66.0"
python-dateutil = ">=2.8.0"
opencv-python = ">=4.8.0"
numpy = ">=1.24.0"
pyyaml = ">=6.0"
dateparser = ">=2.8.0"
trl = ">=0.7.0"
bitsandbytes = ">=0.41.0"
xformers = ">=0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["app", "data_pipeline", "finscribe"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "paddleocr.*",
    "camel.*",
    "unsloth.*",
    "transformers.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov=data_pipeline",
    "--cov=finscribe",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app", "data_pipeline", "finscribe"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

